--- a/src/app/_styles/variables.css
+++ b/src/app/_styles/variables.css
@@ -289,11 +289,15 @@
     --layer-navigation-mobile: 12;
     --layer-navigation: 10;
     --layer-overlay: 200;
+    --layer-banner: 1000;
 
     /* Specific measurements */
+    --navbar-banner-height: 0px; /* Will be set by LegacySiteBanner. Remove when banner is removed.*/
     --navbar-top-height: 67px;
     --navbar-bottom-height: 50px;
-    --navbar-height: calc(var(--navbar-top-height) + var(--navbar-bottom-height));
+    --navbar-height: calc(
+      var(--navbar-banner-height) + var(--navbar-top-height) + var(--navbar-bottom-height)
+    );
 
     @media (--phablet-up) {
       --navbar-top-height: 80px;
