--- a/src/components/LegacySiteBanner/LegacySiteBanner.module.css
+++ b/src/components/LegacySiteBanner/LegacySiteBanner.module.css
@@ -1,36 +1,31 @@
-
 .bannerContainer {
-  background-color: #B7D2FF;
-  color: #041e2e;
+  background-color: var(--brand-color-blue-3);
+  height: var(--navbar-banner-height);
+  color: var(--brand-color-grey-10);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 12px 16px;
   width: 100%;
   box-sizing: border-box;
-  font-family: sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.5;
+  font-size: var(--text-body-s);
   position: relative;
-  z-index: 1000;
+  z-index: var(--layer-banner);
 }
 
 .bannerContent {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: var(--space-xs);
   flex-wrap: wrap;
   justify-content: center;
-  /* Make content take up available space to center it when the close button is absolute */
   flex-grow: 1;
-  padding-right: 24px; /* Add padding to avoid text overlapping with the close button */
+  padding-right: 24px;
 }
 
 .bannerLink {
   color: black;
   text-decoration: none;
-  white-space: nowrap; /* Prevents the link text from breaking */
+  white-space: nowrap;
   display: flex;
   align-items: center;
   gap: 0.25em;
@@ -49,7 +44,6 @@
   border-radius: 50%;
   display: flex;
   transition: background-color 0.2s ease;
-  /* Position button relative to the main container */
   position: absolute;
   right: 16px;
   top: 50%;
